add TestFile to Padawan